[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://MergeImage/MergeImage.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="UINode" type="Node2D" parent="."]
position = Vector2( 160.232, 32.643 )

[node name="DownloadButton" type="Button" parent="UINode"]
margin_left = 284.546
margin_top = -0.0306168
margin_right = 401.546
margin_bottom = 43.9694
text = "DOWNLOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleIdInput" type="TextEdit" parent="UINode"]
margin_left = -138.373
margin_top = 2.53095
margin_right = 21.6269
margin_bottom = 42.531
text = "662774"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuputDisplay" type="RichTextLabel" parent="UINode"]
margin_left = -139.0
margin_top = 71.0
margin_right = 415.0
margin_bottom = 896.0
custom_styles/normal = SubResource( 1 )
custom_colors/default_color = Color( 0.972549, 0.972549, 0.972549, 1 )
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EpisodeFromInput" type="SpinBox" parent="UINode"]
margin_left = 64.1447
margin_top = 10.6908
margin_right = 138.145
margin_bottom = 34.6908
min_value = 1.0
max_value = 9999.0
value = 1.0
rounded = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EpisodeToInput" type="SpinBox" parent="UINode"]
margin_left = 173.855
margin_top = 11.9019
margin_right = 247.855
margin_bottom = 35.9019
min_value = 1.0
max_value = 9999.0
value = 2.0
rounded = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="~" type="Label" parent="UINode"]
margin_left = 133.218
margin_top = 9.8728
margin_right = 172.218
margin_bottom = 37.8728
text = "~"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 19.0
margin_top = 80.0
margin_right = 574.0
margin_bottom = 368.0
popup_exclusive = true
window_title = "디렉토리 열기"
dialog_hide_on_ok = true
mode = 2
access = 2
current_dir = "/tmp/guest-ibezl0/Desktop/GodotProject/webtoon_downloader"
current_path = "/tmp/guest-ibezl0/Desktop/GodotProject/webtoon_downloader/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MergeImage" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="UINode/DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="value_changed" from="UINode/EpisodeFromInput" to="." method="_on_EpisodeFrom_value_changed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
